# AWS_Ontology

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PRIVATE_REPO_TEMPLATE.md  README.md  mypy.ini  pyproject.toml  requirements.txt
.claude/: settings.json
.cursor/rules/: workflow.mdc
.githooks/: pre-commit
.github/workflows/: ci.yml
automation/: Dockerfile  aws-ontology-monitor.service  crontab_example.txt  docker-entrypoint.sh  schedule_monitoring.py
docs/: ARANGODB_INTEGRATION.md  AUTOMATION_GUIDE.md  CODE_QUALITY_IMPROVEMENTS.md  ENVIRONMENT_VARIABLES.md  MAINTENANCE_STRATEGY.md  PRD.md  PROTEGE_GUIDE.md  SPARQL_EXAMPLES.md  USAGE_GUIDE.md
ontology/: aws.owl  aws.shapes.ttl  aws.ttl  examples.ttl
tests/: base_test.py  test_dl_compliance.py  test_examples_validation.py  test_format_sync.py  test_ontology_quality.py  test_performance.py  test_shacl_validation.py  test_tools_smoke.py
tools/: README.md  import_to_arangodb.py  monitor_aws_changes.py  setup_git_hooks.py  sync_formats.py  transform_ontology.py
utils/: cli_common.py  common.py  config_validation.py  logging_config.py
